--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,10 @@
-<h1>Todo App</h1>
-
+<div class="container">
+    <div class="row justify-content-center align-items-center">
+        <div class="col-12 text-center">
+            <app-header></app-header>
+            <app-add-todo></app-add-todo>
+            <app-show-todo></app-show-todo>
+        </div>
+    </div>
+</div>
 <router-outlet />
