--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: #4d7e91;
+    background: linear-gradient(90deg, rgba(77, 126, 145, 1) 0%, rgba(161, 190, 204, 1) 100%);
+    color:#ffffff;
+}
+
+.container,
+.row {
+    height: 100vh;
+    width: 100%;
+}
