--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,1 +1,3 @@
-<h1>Todo List <i class="fa-solid fa-plus"></i></h1>
+<div class="mb-4">
+    <h1>Todo List <i class="fa-solid fa-plus"></i></h1>
+</div>
