--- a/src/app/show-todo/show-todo.html
+++ b/src/app/show-todo/show-todo.html
@@ -1,7 +1,9 @@
-<div class="tasks">
-    <div class="task bg-white text-dark p-2 mb-2 d-flex justify-content-between align-items-center">
-        <input type="checkbox">
-        <p>this is the task</p>
-        <button class="btn btn-danger">Delete</button>
+<div class="tasks mt-5">
+    <div class="task d-flex justify-content-center align-items-center">
+        <div class="col-11 bg-white text-dark d-flex align-items-center py-2 px-2 gap-5">
+            <input type="checkbox" class="form-check-input px-3 py-3">
+            <p class="m-0">this is the task</p>
+        </div>
+        <button class="btn btn-danger rounded-0" style="padding-block:0.87rem;"><i class="bi bi-trash"></i></button>
     </div>
 </div>
