--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,8 @@
 <div class="container">
     <div class="row justify-content-center align-items-center">
-        <div class="col-5 text-center">
+        <div class="col-sm-12 col-md-8 col-xl-5 text-center">
             <app-header></app-header>
             <app-add-todo></app-add-todo>
-            <app-show-todo></app-show-todo>
         </div>
     </div>
 </div>
